--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
          requests and redirects to OAuth, causing CORS errors. The manifest is not needed
          since this is not a PWA. Theme color is preserved via meta tag below. -->
     <meta name="theme-color" content="#3b82f6" />
+    <meta name="description" content="API 510 pressure vessel inspection software with ASME Section VIII calculations, UT thickness tracking, corrosion rate analysis, and professional report generation." />
+    <meta name="keywords" content="API 510, pressure vessel inspection, ASME Section VIII, thickness measurement, corrosion rate, remaining life, MAWP, UT readings, inspection report, NDE" />
     <title>API 510 Pressure Vessel Inspection App</title>    
     <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
