--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,9 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#3b82f6" />
-    <title>API 510 Pressure Vessel Inspection App</title>    
+    <title>API 510 Pressure Vessel Inspection App</title>
+    <meta name="description" content="API 510 pressure vessel inspection software with ASME Section VIII calculations, corrosion rate analysis, and automated report generation." />
+    <meta name="keywords" content="API 510, pressure vessel inspection, ASME Section VIII, MAWP calculation, corrosion rate, remaining life, thickness measurement, NDE, fitness for service, inspection report" />
     <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
