--- a/client/index.html
+++ b/client/index.html
@@ -1,30 +1,23 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#3b82f6" />
-    <title>API 510 Pressure Vessel Inspection App</title>
-    <meta name="description" content="API 510 pressure vessel inspection software with ASME Section VIII calculations, corrosion rate analysis, and automated report generation." />
-    <meta name="keywords" content="API 510, pressure vessel inspection, ASME Section VIII, MAWP calculation, corrosion rate, remaining life, thickness measurement, NDE, fitness for service, inspection report" />
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#3b82f6" />
+  <title>API 510 Pressure Vessel Inspection App</title>
+  <meta name="description"
+    content="API 510 pressure vessel inspection software with ASME Section VIII calculations, corrosion rate analysis, and automated report generation." />
+  <meta name="keywords"
+    content="API 510, pressure vessel inspection, ASME Section VIII, MAWP calculation, corrosion rate, remaining life, thickness measurement, NDE, fitness for service, inspection report" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script
-      defer
-      src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <script defer src="%VITE_ANALYTICS_ENDPOINT%/umami" data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
+</body>
 
 </html>
